--- a/jocn2017.tex
+++ b/jocn2017.tex
@@ -490,6 +490,7 @@ Cyclic sleep mode has been defined in ITU standards to build a energy efficiency
 %Kubo et al. \cite{kubo2010adaptive} propose a power saving mechanism with variable sleep period. The proposed mechanism is evaluated under two sleep period determination algorithms, packet interval-based and service-based. Bang et al. \cite{6093689} put forward power saving algorithm to balance the power consumption and state transition delay in cyclic mode. Fiammengo et al. \cite{fiammengo2011experimental} conduct experiments to evaluate the performance of cyclic sleep with adaptive sleep period. Results show that around 60\% to 70\% energy savings are achieved under different traffic patterns.
 
 The major limitation of the aforementioned works is that the sleep period determination based on packet interval may not predict the incoming traffic condition precisely. Improper sleep period may degrade the energy saving performance and influence the quality of service (QoS). To overcome this limitation, Maneyama et al. present a cyclic sleep control scheme based on the queue length information. Compared with 
+compare
 
 
 
